--- a/frontend/src/styles/lobby.css
+++ b/frontend/src/styles/lobby.css
@@ -166,18 +166,18 @@
 .player_list_container {
     width: 30rem;
     height: 40rem;
-    background-color: rgba(52, 52, 52, 0.668);
-    z-index: 102;
-    right: 2rem;
-    margin-top: 11rem;
-    padding: 1rem 1rem 1rem 1rem;
     position: absolute;
-    overflow-y: auto;
     background-color: rgba(35, 35, 35, 0.558);
-    border: none;
+    box-sizing: border-box;
+    z-index: 102;
+    right: 4rem;
+    bottom: 4rem;
+    padding: 1rem;
+    overflow: hidden;
+    overflow-y: auto;
     box-shadow: 0 0 5px 0 rgb(0, 23, 1);
     user-select: none;
-    visibility: hidden;
+    visibility: hidden;  
 }
 
 .player_list_header {
@@ -220,7 +220,7 @@
 }
 
 .player_list_item_container:hover {
-    transform: scale(1.04);
+    transform: scale(1.02);
 }
 
 .player_list_item_container:active {
@@ -326,7 +326,8 @@
 */
 @media screen and (max-width: 1000px) {
     .player_list_container {
-        bottom: 1rem;
+        right: 4rem;
+        bottom: 4rem;
         width: 20rem;
         height: 25rem;
     }
